fix recommend func and add get user role
